zip/mdapiOTVLwr/unpackaged/objects/OTPValidationOTV__e.object
<CustomObject>
    <fields>
        <fullName>scaUid__c</fullName>
        <label>scaUid</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>statusDetail__c</fullName>
        <label>statusDetail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>OTPValidationOTV</label>
    <pluralLabel>OTPValidationOTV</pluralLabel>
</CustomObject>